[package]
name = "netstat-rust"
version = "0.1.2"
authors = ["Ketan Kothari <ket000@gmail.com>"]
edition = "2024"
description = "Cross Platform netstat-rust program for windows/linux/mac"
license = "MIT"
repository = "https://github.com/ket000/netstat-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netstat2 = "0.11.1"
sysinfo = "0.33.1"
termcolor = "1.4.1"
